--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,13 +43,13 @@
         app:layout_constraintStart_toEndOf="@+id/tickToe"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.149"
-        app:srcCompat="@drawable/fifteens" />
+        app:srcCompat="@drawable/miner" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Пятнашки"
+        android:text="Сапёр"
         android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/fifteens"
